@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- Load Test2::Event::Warning in the plugin instead of relying on Test2 to do
+  it for us. This should avoid the bug reported by Todd Rinaldo and eliminates
+  the need for the INIT block, which caused it's own problems.
+
+
 0.03     2016-10-17
 
 - Add the $SIG{__WARN__} hook in an INIT block. We really don't want to
